--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.15.2",
+    "lowdb": "^1.0.0",
     "mysql": "^2.15.0",
     "node-querybuilder": "^1.0.3",
     "socket.io": "^1.7.4"
